--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# entorno virtual
+.venv/
+
+# carpeta de archivos temporales
+__pycache__/
+
+# carpeta de archivos de compilación
+build/
+
+# carpeta de archivos de cobertura
+coverage/
+
+# carpeta de archivos de producción
+/build
+
 # dependencies
 /node_modules
 /.pnp
@@ -8,8 +23,7 @@
 # testing
 /coverage
 
-# production
-/build
+
 
 # misc
 .DS_Store
@@ -21,3 +35,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
